added new models page; removed code

--- a/notebooks/Final_Notebook_Group59.ipynb
+++ b/notebooks/Final_Notebook_Group59.ipynb
@@ -538,13 +538,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Modified Hachinski"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hach_raw = pd.read_csv('MODHACH.csv')\n",
+    "    # Looks like ADNI 1 subjects only took exam just before baseline (visitcode = 'sc')\n",
+    "\n",
+    "# Keep ADNI 1 only\n",
+    "hach_raw.drop(hach_raw[-hach_raw['Phase'].isin(['ADNI1'])].index, inplace=True)\n",
+    "# Drop unneeded columns\n",
+    "hach_raw.drop(['Phase', 'ID', 'SITEID', 'VISCODE2', 'USERDATE',\n",
+    "               'USERDATE2', 'EXAMDATE', 'update_stamp'], axis=1, inplace=True)\n",
+    "# Rename columns\n",
+    "hach_raw.columns = [x.lower() for x in hach_raw.columns]\n",
+    "hach_raw.rename(columns={'rid': 'RID'}, inplace=True)\n",
+    "# Keep baseline scores only (not sure what viscode 'f' means)\n",
+    "hach_raw['viscode'] = hach_raw['viscode'].apply(lambda x : x.replace('m', ''))\n",
+    "hach_raw.drop(hach_raw[-hach_raw['viscode'].isin(['sc', '06', '12'])].index, inplace=True)\n",
+    "# Some scores have a max of 2 and are never 1 (i.e. they are weighted more heavily in the final score)\n",
+    "    # Recode these to [0,1]\n",
+    "for col in [x for x in hach_raw.columns if re.search(r'hm',x) != None and x != 'hmscore']:\n",
+    "    hach_raw[col].replace(2,1, inplace=True)\n",
+    "\n",
+    "# Doesn't need to be reshaped since we only have one exam per subject\n",
+    "# Drop viscode\n",
+    "hach_raw.drop('viscode', axis=1, inplace=True)\n",
+    "\n",
+    "# Pickle clean data\n",
+    "hach_raw.to_pickle('clean/hach_clean.pkl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### NPI (Neuropsychiatric Inventory Q)"
+   ]
   },
   {
    "cell_type": "code",
@@ -553,7 +591,60 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "npi_raw = pd.read_csv('NPIQ.csv')\n",
+    "\n",
+    "# Keep ADNI 1 only \n",
+    "npi_raw.drop(npi_raw[-npi_raw['Phase'].isin(['ADNI1'])].index, inplace=True)\n",
+    "# Keep baseline, 6 month, and 12 month inventories\n",
+    "npi_raw['VISCODE'] = npi_raw['VISCODE'].apply(lambda x : x.replace('m', ''))\n",
+    "npi_raw.drop(npi_raw[-npi_raw['VISCODE'].isin(['bl', '06', '12'])].index, inplace=True)\n",
+    "# Drop unneeded columns\n",
+    "npi_raw.drop(['Phase', 'ID', 'SITEID', 'VISCODE2', 'USERDATE',\n",
+    "               'USERDATE2', 'EXAMDATE', 'update_stamp'], axis=1, inplace=True)\n",
+    "# -4 and -1 values are not valid; replace with NaN\n",
+    "npi_raw.replace([-4, -1], np.nan, inplace=True)\n",
+    "\n",
+    "# Columns with 'SEV' suffix are almost always missing (dict says these are 'Severity Ratings' for each item)\n",
+    "npi_raw.drop([x for x in npi_raw.columns if re.search(r'SEV', x) != None], axis=1, inplace=True)\n",
+    "\n",
+    "# Rename columns\n",
+    "npi_raw.columns = [x.lower() for x in npi_raw.columns]\n",
+    "npi_raw.rename(columns={'rid': 'RID'}, inplace=True)\n",
+    "\n",
+    "npi_raw = npi_raw.pivot(index='RID', columns='viscode')\n",
+    "# Collapse multidemensional index into one\n",
+    "npi_raw.columns = ['_'.join(col).strip() for col in npi_raw.columns.values]\n",
+    "\n",
+    "# check count\n",
+    "npi_raw.dropna().shape\n",
+    "\n",
+    "# Pickle clean data\n",
+    "npi_raw.to_pickle('clean/npi_clean.pkl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Merge exams on RID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "merged = adas_raw.copy()\n",
+    "for df in [cdr_raw, faq_raw, gds_raw, mmse_raw, hach_raw, npi_raw]:\n",
+    "    merged = pd.merge(merged, df, left_index=True, right_index=True)\n",
+    "\n",
+    "# Pickle merged data\n",
+    "merged.to_pickle('clean/np_data.pkl')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -906,9 +997,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the initial attempts to fit models to the NPI and GD score questions individually, we noticed that the baseline, 6 month, and 12 month results were very different. While attempting to identify the source of this variation, we noted that 4 individuals who had baseline visit records did not have 6 month records, and 4 more patients who had baseline & 12 month records did not have 12 monht records. We removed this individuals, in case they had other health problems that interfered with their participation in ADNI1, but this did not fix the problem. We then wondered if we would observe higher variance in the baseline scores for the various tests; see the next series of plots. However, we observed that the scores for the baseline records tended to be less distributed than those for the other records. \n",
-    "\n",
-    "## ugh I still don't know what to say about this..."
+    "In the initial attempts to fit models to the NPI and GD score questions individually, we noticed that the baseline, 6 month, and 12 month results were very different. While attempting to identify the source of this variation, we noted that 4 individuals who had baseline visit records did not have 6 month records, and 4 more patients who had baseline & 12 month records did not have 12 monht records. We removed this individuals, in case they had other health problems that interfered with their participation in ADNI1, but this did not fix the problem. We then wondered if we would observe higher variance in the baseline scores for the various tests; see the next series of plots. However, we observed that the scores for the baseline records tended to be less distributed than those for the other records. "
    ]
   },
   {
@@ -1130,13 +1219,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "(see separate notebook titled \"baseline_models_and_pca.ipynb\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2131,19 +2220,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SECTION 4: COMPARING RESULTS & MAKING CONCLUSIONS"
+    "# SECTION 4: COMPARING RESULTS"
    ]
   },
   {
